FIxed alignment

--- a/volv.css
+++ b/volv.css
@@ -6,21 +6,27 @@ body {
 
 .header {
   display: grid;
-  padding: 30px 30px 0px 30px;
+  grid-area: header;
+  margin: 0px 0px 0px 0px;
   grid-template-columns: auto auto;
   align-self: flex-start;
   background-color: #fff;
   max-width: 1920px;
-  margin: auto auto;
+  position: absolute;
+  width: 100%;
 }
 
 .volv-logo {
   height: 45px;
   justify-self: flex-start;
+  margin: 20px;
 }
 
 .instagram {
   justify-self: flex-end;
+  margin: 30px;
+  /* margin-left: auto;
+  margin-right: 10px; */
 }
 
 .instagram > img {
@@ -31,8 +37,9 @@ body {
   font-family: "Lato", sans-serif;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr auto;
+  grid-template-rows: auto 1fr 1fr auto;
   grid-template-areas:
+    "header header"
     "readlessknowmore readlessknowmore"
     "evolvewithus phone"
     "footer footer";
@@ -71,7 +78,7 @@ body {
 .read-less-know-more {
   grid-area: readlessknowmore;
   /* justify-self: center; */
-  height: 80vh;
+  height: 100vh;
   background: url("Assets/V\ Light.svg");
   background-repeat: no-repeat;
   background-position: left;
@@ -86,7 +93,7 @@ body {
 
 .evolve-with-us {
   grid-area: evolvewithus;
-  margin: 15% 10%;
+  margin: 7% 10%;
   display: grid;
   align-content: flex-start;
 }
@@ -112,7 +119,7 @@ body {
   background: url("Assets/Phone\ Graphic\ 2.png");
   background-repeat: no-repeat;
   background-size: 1100px;
-  background-position-y: 74vh;
+  background-position-y: 80vh;
   background-position-x: -20%;
   grid-row-start: 1;
 }
@@ -123,6 +130,7 @@ h1 {
   text-align: center;
   line-height: 130%;
   letter-spacing: -1px;
+  margin-top: 0px;
 }
 
 p {
@@ -347,9 +355,9 @@ a:hover {
 }
 
 @media only screen and (min-height: 860px) {
-  .read-less-know-more {
+  /* .read-less-know-more {
     background-position-y: 100%;
-  }
+  } */
 
   h1 {
     font-size: 72px;
@@ -362,9 +370,9 @@ a:hover {
 }
 
 @media only screen and (min-height: 1280px) {
-  .header {
+  /* .header {
     padding: 60px;
-  }
+  } */
 
   /* .phone {
         background-size: 1100px;
@@ -508,13 +516,13 @@ a:hover {
     justify-self: flex-start;
   }
 
-  .header {
+  /* .header {
     padding: 20px;
-  }
+  } */
 
   .read-less-know-more {
     background: none;
-    height: 60vh;
+    height: 100vh;
   }
 
   .phone {
@@ -563,7 +571,7 @@ a:hover {
 
 @media only screen and (max-width: 420px) {
   .read-less-know-more {
-    height: 420px;
+    height: 100vh;
   }
 
   .volv-v > h1 {
